linux-tools (3.16~rc7-1) UNRELEASED; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * genorig: Include new directory for usbip UAPI header
  * debian/control: Update Build-Depends for usbip switching from
    libsysfs to libudev
  * perf: Build with V=1 as V=2 no longer works
  * perf: Change build command to avoid a rebuild during 'make install'

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 29 Jul 2014 18:08:55 +0100

linux-tools (3.14-1) unstable; urgency=medium

  * New upstream release

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 28 Apr 2014 17:46:24 +0100

linux-tools (3.14~rc7-1~exp1) experimental; urgency=medium

  * New upstream release candidate

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 17 Mar 2014 19:31:14 +0000

linux-tools (3.13.6-1) unstable; urgency=medium

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.13.5
    - Modpost: fixed USB alias generation for ranges including 0x9 and 0xA
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.13.6
    - perf trace: Fix ioctl 'request' beautifier build problems on
      !(i386 || x86_64) arches

  [ Ben Hutchings ]
  * linux-tools: Remove the 'trace_3.13' link to perf
  * Clean another autoconf-generated file so double-builds work

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 19 Mar 2014 22:33:21 +0000

linux-tools (3.13.4-1) unstable; urgency=medium

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.13.2
    - perf kvm: Fix kvm report without guestmount.

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 22 Feb 2014 15:39:27 +0000

linux-tools (3.13-1~exp3) experimental; urgency=medium

  * linux-tools: Fix/revert unportable code in perf trace (fixes FTBFS
    on powerpc, sparc)

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 07 Feb 2014 20:36:29 +0000

linux-tools (3.13-1~exp2) experimental; urgency=medium

  * Merge changes from sid up to 3.12.6-3
