@@ -8,6 +8,8 @@ linux-tools (3.16~rc7-1) UNRELEASED; urgency=medium
     libsysfs to libudev
   * perf: Build with V=1 as V=2 no longer works
   * perf: Change build command to avoid a rebuild during 'make install'
+  * linux-tools: Install traceevent plugins in
+    /usr/lib/traceevent_<version>/plugins (Closes: #756429)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 29 Jul 2014 18:08:55 +0100
 
